Added target blank to social links

--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -16,13 +16,13 @@
         <!--Top Bar-->
         <div class="cs-top-bar">
             <div class="cs-top-social">
-                <a href="https://www.facebook.com/Ansar786123/" class="cs-social-link">
+                <a href="https://www.facebook.com/Ansar786123/" target="_blank" class="cs-social-link">
                     <img class="cs-social-icon" src="/assets/svgs/facebook.svg" alt="logo" width="12" height="12" aria-hidden="true" decoding="async">
                 </a>
-                <a href="https://www.instagram.com/ansar.h_/" class="cs-social-link">
+                <a href="https://www.instagram.com/ansar.h_/" target="_blank" class="cs-social-link">
                     <img class="cs-social-icon" src="/assets/svgs/instagram.svg" alt="logo" width="12" height="12" aria-hidden="true" decoding="async">
                 </a>
-                <a href="https://x.com/ansar_h_" class="cs-social-link">
+                <a href="https://x.com/ansar_h_" target="_blank" class="cs-social-link">
                     <img class="cs-social-icon" src="/assets/svgs/twitter.svg" alt="logo" width="12" height="12" aria-hidden="true" decoding="async">
                 </a>
             </div>
