--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -55,7 +55,7 @@
                     <a href="/" class="cs-nav-link">Home</a>
                 </li>
                 <li class="cs-nav-li">
-                    <a href="/about" class="cs-nav-link">About Us</a>
+                    <a href="/about" class="cs-nav-link">About</a>
                 </li>
                 <li class="cs-nav-li">
                     <a href="/services" class="cs-nav-link">Services</a>
