--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -98,8 +98,8 @@
                     <img class="cs-icon" loading="lazy" decoding="async" src="/assets/svgs/blue-phone.svg" alt="icon" width="24" height="24">
                 </picture>
                 <div class="cs-info">
-                    <span class="cs-header">Free Contact 24/7</span>
-                    <span class="cs-link-content">(604) 555-0234</span>
+                    <span class="cs-header">24/7 Support</span>
+                    <span class="cs-link-content">07442 724028</span>
                 </div>
             </a>
             <a href="/contact" class="cs-button-border">
