--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -42,7 +42,7 @@
                 <li class="cs-li">
                     <a href="mailto:info@example.com" class="cs-link">
                         <img class="cs-icon" src="/assets/svgs/email.svg" alt="email icon" loading="lazy" decoding="async" width="24" height="24" aria-hidden="true">
-                        hussainwebdesigns@gmail.com
+                        info@hussainwebdesigns.com
                     </a>
                 </li>
             </ul>
