--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -74,21 +74,10 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <!-- Preloads -->
-    <link
-      rel="preload"
-      as="font"
-      type="font/woff2"
-      href="/assets/fonts/roboto-v29-latin-regular.woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      as="font"
-      type="font/woff2"
-      href="/assets/fonts/roboto-v29-latin-700.woff2"
-      crossorigin
-    />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!-- Preload an image - tag not rendered if preloadImg is blank to stop console errors -->
     {% if preloadImg != '' %}
