--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -93,7 +93,7 @@
       }
 
       .cs-topper {
-          font-size: (20/16rem);
+          font-size: (18/16rem);
           line-height: 1.2em;
           text-transform: uppercase;
           text-align: inherit;
@@ -105,20 +105,20 @@
       }
 
       .cs-title {
-          /* 39px - 61px */
-          font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
+          /* 32px - 61px */
+          font-size: clamp(2rem, 6.4vw, 3.8125rem);
           font-weight: 700;
-          line-height: 1.2em;
+          line-height: 1.3em;
           text-align: inherit;
-          max-width: 20ch;
-          margin: 0 0 (16/16rem) 0;
+          max-width: 100%;
+          margin: 0 0 (20/16rem) 0;
           color: #fff;
           position: relative;
       }
 
       .cs-text {
-          font-size: (20/16rem);
-          line-height: 1.5em;
+          font-size: (18/16rem);
+          line-height: 1.6em;
           text-align: inherit;
           width: 100%;
           /* 464px - 622px */
@@ -259,6 +259,10 @@
   #hero-1351 {
       .cs-content {
           width: 50%;
+      }
+
+      .cs-title {
+          max-width: 20ch;
       }
 
       .cs-bubbles {
